Update pom.xml for dependency version upgrades and resolving vulnerabilities